<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>expressiongraph</name>
  <description>
    This package provides an expression tree framework for the Kinematics 
    and Dynamics Library (KDL). 
  </description>
  <version>0.1.0</version>
  <!-- <maintainer email="erwin.aertbelien@kuleuven.be">Erwin Aertbelien</maintainer> -->
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <author email="erwin.aertbelien@kuleuven.be">Erwin Aertbelien</author>
  <license>EUPL v1.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>orocos_kdl</depend>

  <!-- <test_depend>gtest</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
